tests/src/frontend/expand/invalid/extension_class6.sk
class A(Int)
extension class A{x: Int}
